<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.wily.moviesdbapp.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvshows"
        android:name="com.wily.moviesdbapp.ui.tvshows.TvShowsFragment"
        android:label="@string/title_tvshows"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.wily.moviesdbapp.ui.favorites.FavoritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>